Opened 11 years ago
Closed 10 years ago
#11089 closed bug (fixed)
Wrong use of BReferenceable in Stack and Tile
Reported by: | pulkomandy | Owned by: | czeidler |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Add-Ons/Decorators/Default | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
I built the support kit in debug mode to debug BReferenceable issues. Booted the resulting image and tried to run Installer from Deskbar. Attaching the debug report.
Attachments (1)
Change History (5)
by , 11 years ago
Attachment: | app_server-538-debug-29-07-2014-18-02-45.report added |
---|
comment:2 by , 10 years ago
Milestone: | R1 → Unscheduled |
---|
Moving S&T related tickets out of R1 milestone (Prop #16).
comment:3 by , 10 years ago
Milestone: | Unscheduled → R1 |
---|
Moving S&T related tickets back into R1 milestone as S&T is in fact now the default. My apologies.
Note:
See TracTickets
for help on using tickets.
Yes BReferences should be used more strict and ReleaseReference / AquireReference should be avoided. This problem could probably avoided by just keeping a BReference<WindowArea> in SATWindow... No time in the near future to fix/test it though...