SATGroup: fix misuse of BReferenceable object

LinearSpec is a BReferenceable, so it is not correct to allocate it as a
member of another object. Wrap it in a BReference to avoid the problem.

Fixes #11089.